--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gymWeb</title>
     <script src="https://kit.fontawesome.com/111fad8343.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -29,8 +29,8 @@
             <div class="containerOneBottom">
                 <div class="containerOneBottomLeft">
                     <p></p>
-                    <img class="leftArrow" src="./leftDirectionA.png" alt="" height="10%" width="15%">
-                    <img class="leftPic" src="./1.png" alt="" height="90%" width="120%">
+                    <img class="leftArrow" src="img/leftDirectionA.png" alt="" height="10%" width="15%">
+                    <img class="leftPic" src="img/1.png" alt="" height="90%" width="120%">
                 </div>
                 <div class="containerOneBottomMiddle">
                     <h1 class="containerOneBottomMiddleHead1">
@@ -40,8 +40,8 @@
                 </div>
                 <div class="containerOneBottomRight">
                     <p></p>
-                    <img class="rightArrow" src="./rightDirectionA.png" alt="">
-                    <img class="rightPic" src="./3.png" alt="">
+                    <img class="rightArrow" src="img/rightDirectionA.png" alt="">
+                    <img class="rightPic" src="img/3.png" alt="">
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                 voluptatem officia eveniet harum?
             </h2>
             <p class="containerThreePara1"></p>
-            <img class="containerThreeImg1" src="./dr4.png" alt="">
+            <img class="containerThreeImg1" src="img/dr4.png" alt="">
             <ul class="containerThreeList">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Reiciendis veniam iste sint dolorum
                     optio
@@ -106,19 +106,19 @@
                 Maiores repudiandae, optio necessitatibus eaque voluptatum?</h2>
             </h2>
             <p class="para3"></p>
-            <img class="img1" src="./dr3.png" alt="">
+            <img class="img1" src="img/dr3.png" alt="">
 
             <img class="img2" src="./ProfileThree.png" alt="">
             <h2 class="img2H">10 + Experience</h2>
             <p class="img2P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eveniet <br>
                 modi natus blanditiis pariatur corrupti a aperiam maxime.</p>
 
-            <img class="img3" src="./vecterThree.png" alt="">
+            <img class="img3" src="img/vecterThree.png" alt="">
             <h2 class="img3H">Best Plan</h2>
             <p class="img3P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis <br>
                 assumenda obcaecati asperiores? Numquam rerum ut blanditiis reiciendis error?</p>
 
-            <img class="img4" src="./nounThree.png" alt="">
+            <img class="img4" src="img/nounThree.png" alt="">
             <h2 class="img4H">Gaurantee Results</h2>
             <p class="img4P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis <br>
                 assumenda obcaecati asperiores? Numquam rerum ut blanditiis reiciendis error?</p>
@@ -147,8 +147,8 @@
         </div>
         <div class="containerSix">
             <h1 class="containerSixHead1">What Will <span style="color: #FED233;">We Provide</span></h1>
-            <img class="containerSixImg1" src="./sixOne.png" alt="">
-            <img class="containerSixImg2" src="./SixTwo.png" alt="">
+            <img class="containerSixImg1" src="img/sixOne.png" alt="">
+            <img class="containerSixImg2" src="img/SixTwo.png" alt="">
             <h2 class="containerSixHead2Left">Personalized Workout Plan</h2>
             <h2 class="containerSixHead2Right">Expert Guidance</h2>
             <p class="containerSixPara1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, fuga?<br>
@@ -165,8 +165,8 @@
 
         </div>
         <div class="containerSeven">
-            <img class="containerSevenImg1" src="./sixThree.png" alt="">
-            <img class="containerSevenImg2" src="./sixFour.png" alt="">
+            <img class="containerSevenImg1" src="img/sixThree.png" alt="">
+            <img class="containerSevenImg2" src="img/sixFour.png" alt="">
             <h2 class="containerSevenHead2Left">Personalized Nutrition Plans</h2>
             <h2 class="containerSevenHead2Right">Results</h2>
             <p class="containerSevenPara1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, fuga?<br>
@@ -223,7 +223,7 @@
                     <p>Today</p>
                 </h1>
                 <p class="containerEightPara2">
-                    <img class="containerEightPara2Img1" src="./eightOne.png" alt="" height="350px" width="300px">
+                    <img class="containerEightPara2Img1" src="img/eightOne.png" alt="" height="350px" width="300px">
                 </p>
             </div>
 
