--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class="containerOneBottomMiddleHead1">
                         Get Your Perfect Workout <br> With The <span style="color: #FED233;"> Perfect Trainers</span>
                     </h1>
-                    <img src="./2.png" alt="Exercise">
+                    <img src="img/2.png" alt="Exercise" height="250px" width="150px">
                 </div>
                 <div class="containerOneBottomRight">
                     <p></p>
@@ -60,15 +60,10 @@
                 molestiae nostrum magnam voluptatibus aperiam corrupti,<br>
                 doloremque hic quidem eveniet. Commodi minima aliquam ex. <br>
                 eaautem adipisci? Odit laborum corporis delectus laudantium?</h3>
-
-            <h3 class="containerTwoHead3" style="top:600px">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Sequi,<br>
-                voluptates voluptas! Pariatur dignissimos, temporibus <br>
-                ratione eaque quos consectetur nemo dolores adipisci perspiciatis!</h3>
             <button class="containerTwoButton">ContactUs</button>
 
             <p class="para2"></p>
-            <img src="./dr.png" alt="">
+            <img src="img/dr.png" alt="" height="300px" width="550px" class="dr">
 
 
 
@@ -77,13 +72,10 @@
             <h1 class="containerThreeHead1"><i>Why People Should Take <span style="color: #FED233;">Health
                         Advoice</span></i>
             </h1>
-            <h2 class="containerThreeHead2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt maxime
-                accusantium
-                <br> voluptatum tenetur dicta,
-                voluptatem officia eveniet harum?
+            <h2 class="containerThreeHead2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo veritatis </h2>
             </h2>
             <p class="containerThreePara1"></p>
-            <img class="containerThreeImg1" src="img/dr4.png" alt="">
+            <img class="containerThreeImg1" src="img/dr4.png" alt="" height="150px" width="150px">
             <ul class="containerThreeList">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Reiciendis veniam iste sint dolorum
                     optio
@@ -108,7 +100,7 @@
             <p class="para3"></p>
             <img class="img1" src="img/dr3.png" alt="">
 
-            <img class="img2" src="./ProfileThree.png" alt="">
+            <img class="img2" src="img/ProfileThree.png" alt="">
             <h2 class="img2H">10 + Experience</h2>
             <p class="img2P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta eveniet <br>
                 modi natus blanditiis pariatur corrupti a aperiam maxime.</p>
@@ -116,12 +108,12 @@
             <img class="img3" src="img/vecterThree.png" alt="">
             <h2 class="img3H">Best Plan</h2>
             <p class="img3P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis <br>
-                assumenda obcaecati asperiores? Numquam rerum ut blanditiis reiciendis error?</p>
+                assumenda obcaecati asperiores? </p>
 
             <img class="img4" src="img/nounThree.png" alt="">
             <h2 class="img4H">Gaurantee Results</h2>
             <p class="img4P">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis <br>
-                assumenda obcaecati asperiores? Numquam rerum ut blanditiis reiciendis error?</p>
+                assumenda obcaecati asperiores? </p>
         </div>
 
         <div class="containerFive">
@@ -227,7 +219,7 @@
                 </p>
             </div>
 
-        </div>
+        </div> 
 
     </div>
 </body>
