--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="containerSix">
             <h1 class="containerSixHead1">What Will <span style="color: #FED233;">We Provide</span></h1>
-            <img class="containerSixImg1" src="img/sixOne.png" alt="">
+            <img class="containerSixImg1" src="img/sixOne.png" alt="" height="150px" with="150px">
             <img class="containerSixImg2" src="img/SixTwo.png" alt="">
             <h2 class="containerSixHead2Left">Personalized Workout Plan</h2>
             <h2 class="containerSixHead2Right">Expert Guidance</h2>
@@ -154,7 +154,6 @@
                 Lorem ipsum dolor sit consectetur adipisicing elit. Dolorum, molestias! <br>
                 Lorem ipsum dolor sit.</p>
 
-
         </div>
         <div class="containerSeven">
             <img class="containerSevenImg1" src="img/sixThree.png" alt="">
@@ -163,14 +162,10 @@
             <h2 class="containerSevenHead2Right">Results</h2>
             <p class="containerSevenPara1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, fuga?<br>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, soluta. <br>
-                Lorem ipsum dolor sit consectetur adipisicing elit. Magni, repudiandae! <br>
-                Lorem ipsum dolor sit consectetur adipisicing elit. Dolorum, molestias! <br>
-                Lorem ipsum dolor sit.</p>
+                .</p>
             <p class="containerSevenPara2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, fuga?<br>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, soluta. <br>
-                Lorem ipsum dolor sit consectetur adipisicing elit. Magni, repudiandae! <br>
-                Lorem ipsum dolor sit consectetur adipisicing elit. Dolorum, molestias! <br>
-                Lorem ipsum dolor sit.</p>
+                </p>
 
             <h1 class="containerSevenHead1">How It Is Actually <span style="color: #FED233;">Works ?</span></h1>
             <h2 class="containerSevenHead2Bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, cum.
@@ -219,7 +214,7 @@
                 </p>
             </div>
 
-        </div> 
+        </div> -->
 
     </div>
 </body>
